# kawat

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISH.md  README.md  TODO.md  about.toml  cliff.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  changelog.yml  ci.yml  commitlint.yml  docs.yml  release.yml  security.yml  setup-branch-protection.yml
crates/htmldate-rs/: Cargo.toml  README.md
crates/htmldate-rs/src/: error.rs  lib.rs  meta.rs  patterns.rs  settings.rs  structural.rs  text.rs  validators.rs
crates/kawat/: Cargo.toml  README.md
crates/kawat-cli/: Cargo.toml  README.md
crates/kawat-cli/src/: main.rs
crates/kawat-core/: Cargo.toml  README.md
crates/kawat-core/src/: cascade.rs  compare.rs  config.rs  document.rs  lib.rs
crates/kawat-dedup/: Cargo.toml  README.md
crates/kawat-dedup/src/: fingerprint.rs  lib.rs  lru_cache.rs  simhash.rs
crates/kawat-extract/: Cargo.toml  README.md
crates/kawat-extract/src/: comments.rs  content.rs  handlers.rs  lib.rs  parser.rs  transforms.rs  tree.rs  wild.rs
crates/kawat-html/: Cargo.toml  README.md
crates/kawat-html/src/: clean.rs  convert.rs  density.rs  lib.rs  tags.rs  textnode.rs
crates/kawat-justext/: Cargo.toml  README.md
crates/kawat-justext/src/: classify.rs  lib.rs  paragraph.rs  stoplists.rs
crates/kawat-metadata/: Cargo.toml  README.md
crates/kawat-metadata/src/: author.rs  json_ld.rs  lib.rs  opengraph.rs  title.rs
crates/kawat-output/: Cargo.toml  README.md
crates/kawat-output/src/: csv_output.rs  html_output.rs  json_output.rs  lib.rs  markdown.rs  txt.rs  xml_output.rs  xml_tei.rs
crates/kawat-readability/: Cargo.toml  README.md
crates/kawat-readability/src/: lib.rs
crates/kawat-xpath/: Cargo.toml  README.md
crates/kawat-xpath/benches/: xpath_benchmark.rs
crates/kawat-xpath/src/: compiled.rs  error.rs  eval.rs  fallback.rs  lib.rs
crates/kawat-xpath/tests/: xpath_tests.rs
crates/kawat/src/: lib.rs
crates/kawat/tests/: golden_test.rs
crates/kawat/tests/golden/: generate.py  metadata.json
crates/kawat/tests/golden/expected/: 01_simple_article.txt  01_simple_article_meta.txt  02_article_with_meta.txt  02_article_with_meta_meta.txt  03_multiple_sections.txt  03_multiple_sections_meta.txt  04_with_lists.txt  04_with_lists_meta.txt  05_with_table.txt  05_with_table_meta.txt  06_with_quotes.txt  06_with_quotes_meta.txt  07_with_code.txt  07_with_code_meta.txt  08_nested_divs.txt  08_nested_divs_meta.txt  09_no_article_tag.txt  09_no_article_tag_meta.txt  10_with_sidebar.txt  10_with_sidebar_meta.txt  11_short_content.txt  11_short_content_meta.txt  12_long_article.txt  12_long_article_meta.txt  13_with_comments.txt  13_with_comments_meta.txt  14_boilerplate_heavy.txt  14_boilerplate_heavy_meta.txt  15_links_everywhere.txt  15_links_everywhere_meta.txt  16_mixed_formatting.txt  16_mixed_formatting_meta.txt  17_image_heavy.txt  17_image_heavy_meta.txt  18_json_ld_article.txt  18_json_ld_article_meta.txt  19_minimal_html.txt  19_minimal_html_meta.txt  20_emptyish.txt  20_emptyish_meta.txt
crates/kawat/tests/golden/fixtures/: 01_simple_article.html  02_article_with_meta.html  03_multiple_sections.html  04_with_lists.html  05_with_table.html  06_with_quotes.html  07_with_code.html  08_nested_divs.html  09_no_article_tag.html  10_with_sidebar.html  11_short_content.html  12_long_article.html  13_with_comments.html  14_boilerplate_heavy.html  15_links_everywhere.html  16_mixed_formatting.html  17_image_heavy.html  18_json_ld_article.html  19_minimal_html.html  20_emptyish.html
scripts/: dry-run-publish.sh  publish-failed.sh  publish.sh  run-bench.sh  test-release.sh  verify-published.sh
