[workspace]
resolver = "2"
members = [
    "crates/kawat",
    "crates/kawat-core",
    "crates/kawat-html",
    "crates/kawat-xpath",
    "crates/kawat-extract",
    "crates/kawat-readability",
    "crates/kawat-justext",
    "crates/kawat-metadata",
    "crates/kawat-dedup",
    "crates/kawat-output",
    "crates/kawat-cli",
    "crates/htmldate-rs",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/SHA888/kawat"
keywords = ["web-scraping", "text-extraction", "html", "boilerplate-removal", "nlp"]
categories = ["web-programming", "text-processing", "parser-implementations"]

[workspace.dependencies]
# HTML parsing + XPath
sxd_html = "0.1"
sxd-document = "0.3"
sxd-xpath = "0.4"
scraper = "0.26"
lol_html = "2"

# Readability fallback
dom_smoothie = "0.5"

# Date handling
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML output
quick-xml = { version = "0.39", features = ["serialize"] }

# CSV output
csv = "1"

# URL handling
url = "2"

# Regex
regex = "1"
once_cell = "1"

# Hashing / dedup
lru = "0.16"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha1_smol = "1"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
tokio = { version = "1", features = ["full"] }

# Language detection (optional)
lingua = { version = "1.8", default-features = false, features = ["latin"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Encoding
encoding_rs = "0.8"

# Internal workspace crates
kawat-core = { version = "0.1.0", path = "crates/kawat-core" }
kawat-html = { version = "0.1.0", path = "crates/kawat-html" }
kawat-xpath = { version = "0.1.0", path = "crates/kawat-xpath" }
kawat-extract = { version = "0.1.0", path = "crates/kawat-extract" }
kawat-readability = { version = "0.1.0", path = "crates/kawat-readability" }
kawat-justext = { version = "0.1.0", path = "crates/kawat-justext" }
kawat-metadata = { version = "0.1.0", path = "crates/kawat-metadata" }
kawat-dedup = { version = "0.1.0", path = "crates/kawat-dedup" }
kawat-output = { version = "0.1.0", path = "crates/kawat-output" }
htmldate-rs = { version = "0.1.0", path = "crates/htmldate-rs" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
