[package]
name = "kawat-extract"
description = "Main content extraction engine for kawat"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kawat-xpath = { workspace = true }
kawat-html = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
