[package]
name = "kawat-output"
description = "Output format converters for kawat (TXT, MD, JSON, XML, CSV, TEI)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }
